shared/src/main/java/pt/isep/nsheets/shared/core/vb/VbParser.java
package pt.isep.nsheets.shared.core.vb;

// Generated from Vb.g4 by ANTLR 4.2.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VbParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__6=1, T__5=2, T__4=3, T__3=4, T__2=5, T__1=6, T__0=7, TYPE_INT=8, TYPE_FLOAT=9, 
		TYPE_STRING=10, OR=11, AND=12, EQ=13, NEQ=14, GT=15, LT=16, GTEQ=17, LTEQ=18, 
		PLUS=19, MINUS=20, MULT=21, DIV=22, MOD=23, POW=24, NOT=25, SCOL=26, ASSIGN=27, 
		OPAR=28, CPAR=29, OPENIF=30, CLOSEIF=31, ENDWHILE=32, TRUE=33, FALSE=34, 
		NIL=35, IF=36, ELSE=37, WHILE=38, LOG=39, ID=40, INT=41, FLOAT=42, STRING=43, 
		COMMENT=44, SPACE=45, OTHER=46;
	public static final String[] tokenNames = {
		"<INVALID>", "'Return'", "'As'", "'Function'", "'Public'", "'End'", "'Private'", 
		"'Dim'", "'Integer'", "'Float'", "'String'", "'||'", "'&&'", "'=='", "'<>'", 
		"'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", 
		"'!'", "';'", "'='", "'('", "')'", "'Then'", "CLOSEIF", "ENDWHILE", "'true'", 
		"'false'", "'nil'", "'If'", "'Else'", "'While'", "'Log'", "ID", "INT", 
		"FLOAT", "STRING", "COMMENT", "SPACE", "OTHER"
	};
	public static final int
		RULE_parse = 0, RULE_block = 1, RULE_function = 2, RULE_init_method = 3, 
		RULE_typeOfFunction = 4, RULE_returnMethod = 5, RULE_end_method = 6, RULE_stat = 7, 
		RULE_nameOfMethod = 8, RULE_declaration = 9, RULE_assignment = 10, RULE_if_stat = 11, 
		RULE_condition_block_if = 12, RULE_stat_block_if = 13, RULE_while_stat = 14, 
		RULE_stat_block_while = 15, RULE_log = 16, RULE_expr = 17, RULE_atom = 18, 
		RULE_type = 19;
	public static final String[] ruleNames = {
		"parse", "block", "function", "init_method", "typeOfFunction", "returnMethod", 
		"end_method", "stat", "nameOfMethod", "declaration", "assignment", "if_stat", 
		"condition_block_if", "stat_block_if", "while_stat", "stat_block_while", 
		"log", "expr", "atom", "type"
	};

	@Override
	public String getGrammarFileName() { return "Vb.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VbParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(VbParser.EOF, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); block();
			setState(41); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			setState(55);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 7) | (1L << IF) | (1L << WHILE) | (1L << LOG) | (1L << ID) | (1L << OTHER))) != 0)) {
					{
					{
					setState(43); stat();
					}
					}
					setState(48);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==4 || _la==6) {
					{
					{
					setState(49); function();
					}
					}
					setState(54);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public End_methodContext end_method() {
			return getRuleContext(End_methodContext.class,0);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public ReturnMethodContext returnMethod() {
			return getRuleContext(ReturnMethodContext.class,0);
		}
		public Init_methodContext init_method() {
			return getRuleContext(Init_methodContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); init_method();
			setState(59); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58); stat();
				}
				}
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 7) | (1L << IF) | (1L << WHILE) | (1L << LOG) | (1L << ID) | (1L << OTHER))) != 0) );
			setState(63); returnMethod();
			setState(64); end_method();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Init_methodContext extends ParserRuleContext {
		public NameOfMethodContext nameOfMethod() {
			return getRuleContext(NameOfMethodContext.class,0);
		}
		public TypeOfFunctionContext typeOfFunction() {
			return getRuleContext(TypeOfFunctionContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Init_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterInit_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitInit_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitInit_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Init_methodContext init_method() throws RecognitionException {
		Init_methodContext _localctx = new Init_methodContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_init_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); typeOfFunction();
			setState(67); match(3);
			setState(68); nameOfMethod();
			setState(69); match(2);
			setState(70); type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeOfFunctionContext extends ParserRuleContext {
		public TypeOfFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeOfFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterTypeOfFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitTypeOfFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitTypeOfFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeOfFunctionContext typeOfFunction() throws RecognitionException {
		TypeOfFunctionContext _localctx = new TypeOfFunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeOfFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_la = _input.LA(1);
			if ( !(_la==4 || _la==6) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnMethodContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(VbParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnMethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterReturnMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitReturnMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitReturnMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnMethodContext returnMethod() throws RecognitionException {
		ReturnMethodContext _localctx = new ReturnMethodContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_returnMethod);
		try {
			setState(78);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74); match(1);
				setState(75); expr(0);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76); match(1);
				setState(77); match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class End_methodContext extends ParserRuleContext {
		public End_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterEnd_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitEnd_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitEnd_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final End_methodContext end_method() throws RecognitionException {
		End_methodContext _localctx = new End_methodContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_end_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(5);
			setState(81); match(3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public Token OTHER;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public While_statContext while_stat() {
			return getRuleContext(While_statContext.class,0);
		}
		public If_statContext if_stat() {
			return getRuleContext(If_statContext.class,0);
		}
		public TerminalNode OTHER() { return getToken(VbParser.OTHER, 0); }
		public LogContext log() {
			return getRuleContext(LogContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stat);
		try {
			setState(90);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(83); assignment();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 2);
				{
				setState(84); declaration();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(85); if_stat();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(86); while_stat();
				}
				break;
			case LOG:
				enterOuterAlt(_localctx, 5);
				{
				setState(87); log();
				}
				break;
			case OTHER:
				enterOuterAlt(_localctx, 6);
				{
				setState(88); ((StatContext)_localctx).OTHER = match(OTHER);
				System.err.println("unknown char: " + (((StatContext)_localctx).OTHER!=null?((StatContext)_localctx).OTHER.getText():null));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameOfMethodContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(VbParser.ID, 0); }
		public TerminalNode CPAR() { return getToken(VbParser.CPAR, 0); }
		public TerminalNode OPAR() { return getToken(VbParser.OPAR, 0); }
		public NameOfMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameOfMethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterNameOfMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitNameOfMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitNameOfMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameOfMethodContext nameOfMethod() throws RecognitionException {
		NameOfMethodContext _localctx = new NameOfMethodContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_nameOfMethod);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(ID);
			setState(93); match(OPAR);
			setState(94); match(CPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(VbParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(7);
			setState(97); match(ID);
			setState(98); match(2);
			setState(99); type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(VbParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(VbParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(ID);
			setState(102); match(ASSIGN);
			setState(103); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_statContext extends ParserRuleContext {
		public List<TerminalNode> ELSE() { return getTokens(VbParser.ELSE); }
		public List<TerminalNode> IF() { return getTokens(VbParser.IF); }
		public TerminalNode IF(int i) {
			return getToken(VbParser.IF, i);
		}
		public Stat_block_ifContext stat_block_if() {
			return getRuleContext(Stat_block_ifContext.class,0);
		}
		public List<Condition_block_ifContext> condition_block_if() {
			return getRuleContexts(Condition_block_ifContext.class);
		}
		public TerminalNode ELSE(int i) {
			return getToken(VbParser.ELSE, i);
		}
		public Condition_block_ifContext condition_block_if(int i) {
			return getRuleContext(Condition_block_ifContext.class,i);
		}
		public If_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterIf_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitIf_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitIf_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_statContext if_stat() throws RecognitionException {
		If_statContext _localctx = new If_statContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_if_stat);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105); match(IF);
			setState(106); condition_block_if();
			setState(112);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(107); match(ELSE);
					setState(108); match(IF);
					setState(109); condition_block_if();
					}
					} 
				}
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(117);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(115); match(ELSE);
				setState(116); stat_block_if();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_block_ifContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Stat_block_ifContext stat_block_if() {
			return getRuleContext(Stat_block_ifContext.class,0);
		}
		public Condition_block_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_block_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterCondition_block_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitCondition_block_if(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitCondition_block_if(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condition_block_ifContext condition_block_if() throws RecognitionException {
		Condition_block_ifContext _localctx = new Condition_block_ifContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_condition_block_if);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); expr(0);
			setState(120); stat_block_if();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_block_ifContext extends ParserRuleContext {
		public TerminalNode OPENIF() { return getToken(VbParser.OPENIF, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode CLOSEIF() { return getToken(VbParser.CLOSEIF, 0); }
		public Stat_block_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_block_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterStat_block_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitStat_block_if(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitStat_block_if(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_block_ifContext stat_block_if() throws RecognitionException {
		Stat_block_ifContext _localctx = new Stat_block_ifContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_stat_block_if);
		try {
			setState(127);
			switch (_input.LA(1)) {
			case OPENIF:
				enterOuterAlt(_localctx, 1);
				{
				setState(122); match(OPENIF);
				setState(123); block();
				setState(124); match(CLOSEIF);
				}
				break;
			case 7:
			case IF:
			case WHILE:
			case LOG:
			case ID:
			case OTHER:
				enterOuterAlt(_localctx, 2);
				{
				setState(126); stat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_statContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(VbParser.WHILE, 0); }
		public Stat_block_whileContext stat_block_while() {
			return getRuleContext(Stat_block_whileContext.class,0);
		}
		public While_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).enterWhile_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VbListener ) ((VbListener)listener).exitWhile_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VbVisitor ) return ((VbVisitor<? extends T>)visitor).visitWhile_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final While_statContext while_stat() throws RecognitionException {
		While_statContext _localctx = new While_statContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_while_stat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); match(WHILE);
			setState(130); expr(0);
			setState(131); stat_block_while();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
